# robokit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  save_data.py  setup.py  test_gdino_sam.py  test_gdino_samv2.py
docker/: Dockerfile-ub20.04-ros-noetic-cuda11.8-gazebo  run_container.sh
rkit/: perception.py  utils.py
rkit/iteach_toolkit/DHYOLO/utils/: __init__.py
robokit/: perception.py
robokit/ros/: fetch_listener.py  ros_utils.py
test/: collect_point_prompts.py  ros_test_images.py  save_data.py  test_dataset.py  test_dataset_via_gsam.py  test_dataset_via_gsam2.py  test_depth_anything.py  test_dhyolo.py  test_featup.py  test_gdino.py  test_gdino_prompts.py  test_gdino_sam.py  test_gdino_sam_clip.py  test_gdino_samv2.py  test_gdino_samv2_img.py  test_sam.py  test_samv2.py  test_samv2_1_bbox_prompt.py  test_samv2_point_prompts.py
