[project]
name = "rkit"
version = "0.0.1"
description = "A toolkit for robotic tasks"
authors = [
    { name="Jishnu P", email="jishnu.p@utdallas.edu" },
    { name = "IRVL UTD", email = "irvl.utd@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "chardet",
    "requests",
    "tqdm",
    "ftfy",
    "regex",
    "torch",
    "torchvision",
    "absl-py",
    "open3d",
    "scikit-image",
    "numpy==1.26.4",
    "supervision==0.18.0",
    "rospkg",
    "transforms3d",
    "hydra-core",
    "pillow",
    "huggingface_hub",
    "matplotlib",
    "opencv-python-headless",
    "scipy",
    "pyyaml",
    "munkres",
    "ultralytics",
    "ros_numpy",
]

[project.urls]
Homepage = "https://github.com/OnePunchMonk/robokit"

[project.optional-dependencies]
git = [
    "clip @ git+https://github.com/openai/CLIP.git@a1d071733d7111c9c014f024669f959182114e33",
    "featup @ git+https://github.com/mhamilton723/FeatUp@c04e4c19945ce3e98a5488be948c7cc1fdcdacc6",
    "groundingdino @ git+https://github.com/IDEA-Research/GroundingDINO.git@2b62f419c292ca9c518daae55512fabc3fead4a4",
    "mobile-sam @ git+https://github.com/ChaoningZhang/MobileSAM@c12dd83cbe26dffdcc6a0f9e7be2f6fb024df0ed",
    "sam2 @ git+https://github.com/facebookresearch/sam2@c2ec8e14a185632b0a5d8b161928ceb50197eddc"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
